# agentic-rag-research-paper-analyzer

./: .gitignore  README.md  pyproject.toml  requirements.txt  testing.ipynb  testing_1.ipynb
app/: main.py
app/api/: routes.py
app/core/: embeddings.py  vectordb.py
app/models/: schema.py
app/services/: extractor.py  pipeline.py  reranker.py  retrieval.py
app/utils/: chunking.py  logger.py  pdf_loader.py
frontend/: gradio_ui.py
