[project]
name = "genai-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.1",
    "gradio>=6.8.0",
    "langchain>=1.2.10",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.17",
    "langchain-ollama>=1.0.1",
    "ollama>=0.6.1",
    "pytesseract>=0.3.13",
    "requests>=2.32.5",
    "sentence-transformers>=5.3.0",
    "unstructured[all-docs]>=0.21.5",
    "uvicorn>=0.41.0",
]
